solved layout issue (unfortunately needs a layout table)
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@20913 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -2155,16 +2155,14 @@ input.ilMainMenuSearchSubmit
 	background-repeat:repeat-x;
 	color:#2255a0;
 	border-width:1px;
-	border-top-color: #BABABA;
-	border-left-color: #BABABA;
-	border-bottom-color: #808080;
-	border-right-color: #808080;
+	border-color: #BABABA;
 	border-style:solid;
 	padding: 0px 5px;
 	text-decoration:none;
 	font-size: 70%;
 	cursor:pointer;
 	font-weight:normal;
+	display: inline-block;
 }
 
 
